examples/test/testpolicy19818.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19818
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key28: value18
      key4: value14
      key47: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value45
          key39: value9
          key9: value20
      podSelector:
        matchLabels:
          key45: value9
          key24: value2
          key31: value34
